Custom--app/main/default/objects/Yardi_Property__c/Yardi_Property__c.object-meta.xml
<CustomObject>
    <description>This object facilitates the nightly report that goes to Yardi for import.</description>
    <label>Yardi Property</label>
    <nameField>
        <displayFormat>YP-{0000}</displayFormat>
        <label>Yardi Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yardi Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>