Custom--app/main/default/objects/Yardi_Property__c/fields/Addr1__c.field-meta.xml
<CustomField>
    <fullName>Addr1__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_Street__c), '' , Property__r.Property_Street__c)</formula>
    <label>Addr1</label>
    <type>Text</type>
</CustomField>