Custom--app/main/default/objects/Yardi_Property__c/fields/Addr2__c.field-meta.xml
<CustomField>
    <fullName>Addr2__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_Street__c), '' , Property__r.Property_Street__c)</formula>
    <label>Addr2</label>
    <type>Text</type>
</CustomField>