Custom--app/main/default/objects/Yardi_Property__c/fields/Addr3__c.field-meta.xml
<CustomField>
    <fullName>Addr3__c</fullName>
    <formula>''</formula>
    <label>Addr3</label>
    <type>Text</type>
</CustomField>