Custom--app/main/default/objects/Yardi_Property__c/fields/Attributes_2__c.field-meta.xml
<CustomField>
    <fullName>Attributes_2__c</fullName>
    <formula>IF(ISNULL(Property__r.Baths__c), '' , TEXT(Property__r.Baths__c))</formula>
    <label>Attributes_2</label>
    <type>Text</type>
</CustomField>