Custom--app/main/default/objects/Yardi_Property__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <formula>IF(OR(ISNULL( Property__r.Baths__c ), Property__r.Baths__c == 0), '', TEXT( Property__r.Baths__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baths</label>
    <type>Text</type>
</CustomField>