Custom--app/main/default/objects/Yardi_Property__c/fields/BedRooms__c.field-meta.xml
<CustomField>
    <fullName>BedRooms__c</fullName>
    <formula>IF(ISNULL(Property__r.Bedrooms__c), '', TEXT(Property__r.Bedrooms__c))</formula>
    <label>BedRooms</label>
    <type>Text</type>
</CustomField>