Custom--app/main/default/objects/Yardi_Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_City__c), '' , Property__r.Property_City__c)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>