Custom--app/main/default/objects/Yardi_Property__c/fields/Commission_Min__c.field-meta.xml
<CustomField>
    <fullName>Commission_Min__c</fullName>
    <formula>TEXT(0)</formula>
    <label>Commission_Min</label>
    <type>Text</type>
</CustomField>