Custom--app/main/default/objects/Yardi_Property__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <formula>TEXT(0)</formula>
    <label>Commission_Percent</label>
    <type>Text</type>
</CustomField>