Custom--app/main/default/objects/Yardi_Property__c/fields/Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exp_Date__c</fullName>
    <formula>''</formula>
    <label>Contract_Exp_Date</label>
    <type>Text</type>
</CustomField>