Custom--app/main/default/objects/Yardi_Property__c/fields/Contract_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reserve__c</fullName>
    <formula>TEXT(300)</formula>
    <label>Contract_Reserve</label>
    <type>Text</type>
</CustomField>