Custom--app/main/default/objects/Yardi_Property__c/fields/ContractRent__c.field-meta.xml
<CustomField>
    <fullName>ContractRent__c</fullName>
    <formula>'0'</formula>
    <label>ContractRent</label>
    <type>Text</type>
</CustomField>