Custom--app/main/default/objects/Yardi_Property__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_Country__c), '' , Property__r.Property_Country__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>