Custom--app/main/default/objects/Yardi_Property__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <formula>Rent__c</formula>
    <label>Deposit</label>
    <type>Text</type>
</CustomField>