Custom--app/main/default/objects/Yardi_Property__c/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <formula>TEXT(0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude</label>
    <type>Text</type>
</CustomField>