Custom--app/main/default/objects/Yardi_Property__c/fields/Ext_Ref_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Ref_Property_Id__c</fullName>
    <formula>''</formula>
    <label>Ext_Ref_Property_Id</label>
    <type>Text</type>
</CustomField>