Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Name1__c.field-meta.xml
<CustomField>
    <fullName>Field_Name1__c</fullName>
    <formula>'YEARBUILT'</formula>
    <label>Field_Name1</label>
    <type>Text</type>
</CustomField>