Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Name2__c.field-meta.xml
<CustomField>
    <fullName>Field_Name2__c</fullName>
    <formula>'SAPN'</formula>
    <label>Field_Name2</label>
    <type>Text</type>
</CustomField>