Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Name3__c.field-meta.xml
<CustomField>
    <fullName>Field_Name3__c</fullName>
    <formula>'SCOUNTY'</formula>
    <label>Field_Name3</label>
    <type>Text</type>
</CustomField>