Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Value1__c.field-meta.xml
<CustomField>
    <fullName>Field_Value1__c</fullName>
    <formula>IF(ISNULL(Property__r.Year_Built__c), '' , TEXT(Property__r.Year_Built__c))</formula>
    <label>Field_Value1</label>
    <type>Text</type>
</CustomField>