Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Value2__c.field-meta.xml
<CustomField>
    <fullName>Field_Value2__c</fullName>
    <formula>Property__r.APN__c</formula>
    <label>Field_Value2</label>
    <type>Text</type>
</CustomField>