Custom--app/main/default/objects/Yardi_Property__c/fields/Field_Value3__c.field-meta.xml
<CustomField>
    <fullName>Field_Value3__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_County__c), '' , Property__r.Property_County__c)</formula>
    <label>Field_Value3</label>
    <type>Text</type>
</CustomField>