Custom--app/main/default/objects/Yardi_Property__c/fields/FSetAside__c.field-meta.xml
<CustomField>
    <fullName>FSetAside__c</fullName>
    <formula>'0'</formula>
    <label>FSetAside</label>
    <type>Text</type>
</CustomField>