Custom--app/main/default/objects/Yardi_Property__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <formula>TEXT(0)</formula>
    <label>International</label>
    <type>Text</type>
</CustomField>