Custom--app/main/default/objects/Yardi_Property__c/fields/InvestDate__c.field-meta.xml
<CustomField>
    <fullName>InvestDate__c</fullName>
    <formula>IF(ISNULL(Property__r.Acquisition_Date__c), '', TEXT(MONTH(Property__r.Acquisition_Date__c) ) + '/' + TEXT(DAY(Property__r.Acquisition_Date__c)) + '/' + TEXT(YEAR(Property__r.Acquisition_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvestDate</label>
    <type>Text</type>
</CustomField>