Custom--app/main/default/objects/Yardi_Property__c/fields/Is_Estate__c.field-meta.xml
<CustomField>
    <fullName>Is_Estate__c</fullName>
    <formula>TEXT(0)</formula>
    <label>Is_Estate</label>
    <type>Text</type>
</CustomField>