Custom--app/main/default/objects/Yardi_Property__c/fields/MLA__c.field-meta.xml
<CustomField>
    <fullName>MLA__c</fullName>
    <formula>''</formula>
    <label>MLA</label>
    <type>Text</type>
</CustomField>