Custom--app/main/default/objects/Yardi_Property__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <formula>''</formula>
    <label>Notes</label>
    <type>Text</type>
</CustomField>