Custom--app/main/default/objects/Yardi_Property__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>''</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>