Custom--app/main/default/objects/Yardi_Property__c/fields/Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Code__c</fullName>
    <formula>'THR' + LEFT(Property_Code__c, 2) + Case( Property__r.Region__c , 'Charlotte', '002', 'Las Vegas', '002', 'Seattle', '002', '001')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner_Code</label>
    <type>Text</type>
</CustomField>