Custom--app/main/default/objects/Yardi_Property__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <formula>TEXT(100)</formula>
    <label>Percent</label>
    <type>Text</type>
</CustomField>