Custom--app/main/default/objects/Yardi_Property__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <formula>Property__r.Property_Code__c</formula>
    <label>Property_Code</label>
    <type>Text</type>
</CustomField>