Custom--app/main/default/objects/Yardi_Property__c/fields/RDBasicRent__c.field-meta.xml
<CustomField>
    <fullName>RDBasicRent__c</fullName>
    <formula>'0'</formula>
    <label>RDBasicRent</label>
    <type>Text</type>
</CustomField>