Custom--app/main/default/objects/Yardi_Property__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>'New Unit'</formula>
    <label>Record_Type</label>
    <type>Text</type>
</CustomField>