Custom--app/main/default/objects/Yardi_Property__c/fields/Ref_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Ref_Owner_Id__c</fullName>
    <formula>''</formula>
    <label>Ref_Owner_Id</label>
    <type>Text</type>
</CustomField>