Custom--app/main/default/objects/Yardi_Property__c/fields/Region_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Region_Prefix__c</fullName>
    <formula>CASE(Property__r.Region__c, 'Phoenix', 'az', 'Southern California', 'sca', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Prefix</label>
    <type>Text</type>
</CustomField>