Custom--app/main/default/objects/Yardi_Property__c/fields/Rehab_Office_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Office_Signoff_Date__c</fullName>
    <formula>IF( ISPICKVAL(  Property__r.Residence__r.Most_Recent_Post_Acq_Rehab__r.Stage__c, 'Closed - Cancelled'), null, Property__r.Residence__r.Most_Recent_Post_Acq_Rehab__r.Office_Signoff_Date__c)</formula>
    <label>Rehab Office Signoff Date</label>
    <type>Date</type>
</CustomField>