Custom--app/main/default/objects/Yardi_Property__c/fields/Rehab_Yardi_Integration__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Yardi_Integration__c</fullName>
    <formula>Property__r.Residence__r.Most_Recent_Post_Acq_Rehab__r.Yardi_Integration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Yardi Integration</label>
    <type>Checkbox</type>
</CustomField>