Custom--app/main/default/objects/Yardi_Property__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <formula>IF(ISNULL(Property__r.Exp_Gross_Monthly_Rent_UW__c), '' , TEXT(Property__r.Exp_Gross_Monthly_Rent_UW__c))</formula>
    <label>Rent</label>
    <type>Text</type>
</CustomField>