Custom--app/main/default/objects/Yardi_Property__c/fields/Rent_Ready__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready__c</fullName>
    <formula>IF(Rental_Type__c = "Residential", "1", "0")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent_Ready</label>
    <type>Text</type>
</CustomField>