Custom--app/main/default/objects/Yardi_Property__c/fields/Rental_Type__c.field-meta.xml
<CustomField>
    <fullName>Rental_Type__c</fullName>
    <formula>IF( ISPICKVAL(Property__r.Occupied_Status_Acquisition__c, "Purchased Rented") , "Residential", "Admin")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental_Type</label>
    <type>Text</type>
</CustomField>