Custom--app/main/default/objects/Yardi_Property__c/fields/Residential__c.field-meta.xml
<CustomField>
    <fullName>Residential__c</fullName>
    <formula>TEXT(1)</formula>
    <label>Residential</label>
    <type>Text</type>
</CustomField>