Custom--app/main/default/objects/Yardi_Property__c/fields/Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sqft__c</fullName>
    <formula>IF(ISNULL(Property__r.Square_Feet__c), '' , TEXT(Property__r.Square_Feet__c))</formula>
    <label>Sqft</label>
    <type>Text</type>
</CustomField>