Custom--app/main/default/objects/Yardi_Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_State__c), '' , Property__r.Property_State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>