Custom--app/main/default/objects/Yardi_Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>''</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>