Custom--app/main/default/objects/Yardi_Property__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <formula>'propbut7'</formula>
    <label>Table_Name</label>
    <type>Text</type>
</CustomField>