Custom--app/main/default/objects/Yardi_Property__c/fields/Tax_Recovery_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recovery_Percentage__c</fullName>
    <formula>''</formula>
    <label>Tax_Recovery_Percentage</label>
    <type>Text</type>
</CustomField>