Custom--app/main/default/objects/Yardi_Property__c/fields/Tax_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status_Changed__c</fullName>
    <formula>''</formula>
    <label>Tax_Status_Changed</label>
    <type>Text</type>
</CustomField>