Custom--app/main/default/objects/Yardi_Property__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>CASE(BedRooms__c, '1',"A",'2',"B", '3',"C",'4',"D",'5',"E",'6',"F",'7',"G",'8',"H",'9',"I",'10',"J",'11',"K",'12',"L",'13',"M",'14',"N",'15',"O",'16',"P",'17',"Q",'18',"R",'19',"S",'20',"T",'21',"U",'22',"V",'23',"W",'24',"X",'25',"Y",'26',"Z","") + IF(ISNULL(BedRooms__c), '' , BedRooms__c) + "." + IF(ISNULL(Attributes_2__c), '' , Attributes_2__c)</formula>
    <label>Unit_Type</label>
    <type>Text</type>
</CustomField>