Custom--app/main/default/objects/Yardi_Property__c/fields/UtilityAllowance__c.field-meta.xml
<CustomField>
    <fullName>UtilityAllowance__c</fullName>
    <formula>'0'</formula>
    <label>UtilityAllowance</label>
    <type>Text</type>
</CustomField>