Custom--app/main/default/objects/Yardi_Property__c/fields/Vat_Opted__c.field-meta.xml
<CustomField>
    <fullName>Vat_Opted__c</fullName>
    <formula>TEXT(0)</formula>
    <label>Vat_Opted</label>
    <type>Text</type>
</CustomField>