Custom--app/main/default/objects/Yardi_Property__c/fields/Vat_Recovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Vat_Recovery_Type__c</fullName>
    <formula>''</formula>
    <label>Vat_Recovery_Type</label>
    <type>Text</type>
</CustomField>