Custom--app/main/default/objects/Yardi_Property__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <formula>IF(ISNULL(Property__r.Property_Zip_Code__c), '' , Property__r.Property_Zip_Code__c)</formula>
    <label>ZipCode</label>
    <type>Text</type>
</CustomField>