Custom--app/main/default/objects/Yardi_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DIVISION</columns>
    <columns>NAME</columns>
    <columns>Owner_Code__c</columns>
    <columns>Property_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Executive</role>
    </sharedTo>
</ListView>